--- a/Etudiants/src/application/Etudiant.fxml
+++ b/Etudiants/src/application/Etudiant.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -12,8 +14,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="500.0" prefWidth="569.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.EtudiantController">
+<AnchorPane prefHeight="427.0" prefWidth="569.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.EtudiantController">
    <children>
+      <ImageView fitHeight="560.0" fitWidth="569.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../Downloads/1661978388080%20(1).jpeg" />
+         </image>
+      </ImageView>
       <Text layoutX="207.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sandwhich Creator" wrappingWidth="121.52880859375">
          <font>
             <Font size="24.0" />
@@ -37,14 +44,14 @@
             <Label text="Type of Protein" GridPane.rowIndex="3" />
             <Label text="Type Of Bread" GridPane.rowIndex="4" />
             <Label text="Type of Toppings" GridPane.rowIndex="5" />
-            <TextField fx:id="txtFirstName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="txtLastName" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField fx:id="txtAge" prefHeight="27.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <TextField fx:id="txtSandwhichName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <ComboBox fx:id="cboBread" prefHeight="27.0" prefWidth="171.0" promptText="Choice of Bread" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <Label prefHeight="17.0" prefWidth="77.0" text="Recherche" />
             <Label text="Numéro" GridPane.rowIndex="1" />
             <Label fx:id="LabelID" prefHeight="17.0" prefWidth="38.0" text="ID" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <ComboBox fx:id="cboID" prefHeight="27.0" prefWidth="173.0" promptText="Choose Sandwhich" GridPane.columnIndex="1" />
+            <ComboBox fx:id="cboProtein" prefHeight="27.0" prefWidth="171.0" promptText="Choice of Protein" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <ComboBox fx:id="cboToppings" prefHeight="27.0" prefWidth="171.0" promptText="Choice of Toppings" GridPane.columnIndex="1" GridPane.rowIndex="5" />
          </children>
       </GridPane>
       <HBox layoutX="193.0" layoutY="363.0" spacing="10.0">
@@ -55,6 +62,6 @@
             <Button fx:id="btnClear" layoutX="435.0" layoutY="420.0" mnemonicParsing="false" onAction="#reinitialiser" text="Restart" />
          </children>
       </HBox>
-      <Label fx:id="lblResults" layoutX="172.0" layoutY="414.0" prefHeight="28.0" prefWidth="348.0" textFill="#eb0c0c" />
+      <Label fx:id="lblResults" layoutX="123.0" layoutY="399.0" prefHeight="28.0" prefWidth="348.0" textFill="#eb0c0c" />
    </children>
 </AnchorPane>
